<resources>
    <string name="app_name">BusinessCard</string>
    <string name="title_activity_login">Accedi</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_registrati">Registrati</string>
    <string name="action_accedi">Accedi</string>
    <string name="invalid_username">Nome utente non valido</string>
    <string name="invalid_password">La password deve essere >5 caratteri</string>
    <string name="login_failed">Accesso fallito</string>
    <string name="indietro">Indietro</string>
    <string name="salva">Salva</string>
    <string name="esci">Esci</string>
    <string name="edit">Modifica profilo</string>
    <string name="nickname">Nickname</string>
    <string name="email">Email</string>
    <string name="numero">Numero di telefono</string>
    <string name="add_email">Aggiungi email</string>
    <string name="add_numero">Aggiungi numero di telefono</string>
    <string name="registra_password">Inserisci password >5 caratteri</string>
    <string name="registra_email">Inserisci email</string>
    <string name="profilo">Profilo</string>
    <string name="logo">Logo</string>
    <string name="image_profile">Immagine profilo</string>
</resources>